Fix Login button not working on mobile

--- a/src/components/menu/menuAuth/index.scss
+++ b/src/components/menu/menuAuth/index.scss
@@ -6,6 +6,7 @@
     margin: 0 5px;
     order: 100;
     a {
+        display: block;
         .loginIcon {
             width: 1em;
             margin: 0.3em;
